# json-flatten

./: .gitignore  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/json_flatten/: cli.py
test/: test_cli.py
