[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "json-flatten"
version = "0.3.1"
description = "Python functions for flattening a JSON object to a single dictionary of pairs, and unflattening that dictionary back to a JSON object"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Simon Willison"}
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
]

[project.urls]
Homepage = "https://github.com/simonw/json-flatten"
Issues = "https://github.com/simonw/json-flatten/issues"
CI = "https://github.com/simonw/json-flatten/actions"
Changelog = "https://github.com/simonw/json-flatten/releases"

[project.scripts]
json-flatten = "json_flatten.cli:main"

[project.optional-dependencies]
test = [
    "pytest",
    "black",
    "cogapp",
]

[tool.hatch.build.targets.wheel]
packages = ["src/json_flatten"]
